# MiniEngine

./: .gitignore  CMakeLists.txt  LICENSE  makeDebug.sh  makeRelease.sh
includes/application/: Application.h  ApplicationParameters.h  InternalApplication.h  Platform.h
includes/application/osx/: MiniEngineApplicationDelegate.h  RenderDefaults.h  RenderTargetOSX.h
includes/platform/: Platform.h
includes/render_system/common/: DataTypes.h  FrameTime.h  GenericRenderables.h  IndexBuffer.h  RenderBackendManagerMemoryTest.h  RenderManager.h  RenderManagerProxy.h  RenderQueue.h  RenderResource.h  RenderResourceId.h  RenderSortMask.h  RenderTarget.h  RenderTask.h  Renderable.h  UserTask.h  UserTaskQueue.h  VertexAttributes.h  VertexBuffer.h  Viewport.h
includes/support/: Color.h  GeometryUtils.h  Global.h  MathUtils.h  Matrix3.h  Matrix4.h  Node.h  Node2d.h  Quat.h  Transform2d.h  Transform3d.h  Vector2.h  Vector3.h  Vector4.h
includes/support/utils/: IntrusiveTracked.h  Log.h  MiscUtils.h  ObjectPool.h  Random.h  Range.h  Status.h  StopTimer.h  StringUtils.h  intrusive_ptr.h
includes/tasks/: Executor.h  ExecutorGroup.h  ExecutorResources.h  Task.h  TaskQueue.h
platform/osx/: makeDebug.sh  makeRelease.sh  makeXCodeProject.sh  runTest.sh
platform/windows/: makeVisualCPPProject.bat
source/: CMakeLists.txt
source/application/: Application.cpp
source/application/osx/: InternalApplication.mm  MiniEngineApplicationDelegate.mm  Platform.mm  RenderTargetOSX.cpp
source/application/windows/: Platform.cpp
source/platform/osx/: Platform.mm
source/render_system/common/: GenericRenderables.cpp  IndexBuffer.cpp  RenderBackendManagerMemoryTest.cpp  RenderManager.cpp  RenderManagerProxy.cpp  RenderQueue.cpp  RenderResource.cpp  RenderTask.cpp  Renderable.cpp  VertexAttributes.cpp  VertexBuffer.cpp  Viewport.cpp
source/support/: Color.cpp  GeometryUtils.cpp  MathUtils.cpp  Matrix3.cpp  Matrix4.cpp  Node.cpp  Node2d.cpp  Quat.cpp  Transform2d.cpp  Transform3d.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
source/support/utils/: Log.cpp  Random.cpp  Status.cpp  StopTimer.cpp  StringUtils.cpp
source/tasks/: Executor.cpp  ExecutorGroup.cpp  Task.cpp  TaskQueue.cpp
tests/: CMakeLists.txt
tests/performance/: CMakeLists.txt  generic.cpp  generic.h
tests/platform/: CMakeLists.txt  Platform_Test.cpp
tests/support/: CMakeLists.txt  Node2d_Test.cpp  ObjectPool_Test.cpp
tests/tasks/: CMakeLists.txt  Executor_Test.cpp
